--- a/public/styles/list.css
+++ b/public/styles/list.css
@@ -8,6 +8,26 @@
   z-index: 2;
   transition: all 500ms ease-in-out;
 }
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent,#00ffc8);
+  border-radius: 6px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(transparent,#00c3ff);
+}
+::-moz-scrollbar {
+  width: 5px;
+}
+::-moz-scrollbar-thumb {
+  background: linear-gradient(transparent,#00ffc8);
+  border-radius: 6px;
+}
+::-moz-scrollbar-thumb:hover {
+  background: linear-gradient(transparent,#00c3ff);
+}
 
 .player .player-list .toggle-list {
   position: sticky;
