--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ body {
 .playpause-track,
 .prev-track,
 .next-track,
-.repeat-track {
+.repeat-track,
+.shuffle {
   padding: 25px;
   opacity: 0.7;
   transition: opacity .2s;
@@ -78,10 +79,17 @@ body {
   bottom: 3%;
 }
 
+.shuffle {
+  position: absolute;
+  left: 9%;
+  bottom: 3%;
+}
+
 .playpause-track:hover,
 .prev-track:hover,
 .next-track:hover,
-.repeat-track:hover {
+.repeat-track:hover,
+.shuffle:hover {
   opacity: 1.0;
 }
 
@@ -147,6 +155,12 @@ i.fa-step-backward,
 .seek_slider,
 .volume_slider,
 .toggle-list,
-.repeat-track {
+.repeat-track,
+.shuffle {
   cursor: pointer;
+}
+
+.loop-enabled,
+.shuffle-enabled {
+  color: aqua;
 }
